Corrected pre>code padding. Was 'none', but that's not valid, changed it to 0 which fixes the leading spacing on the first line in a code block. Added several other convenience classes: noscreen, block-center, text-center, block-left, text-left, block-right and text-right. These classes can be set on a DIV that wraps Markdown blocks. The block-* classes set display:table so that the text block moves, but the text within will stay as-is unless you also use one of the text-* classes. For example, surrounding a list with a div of just class block-center would center the list, but the items would all still be left-aligned.

--- a/buttondown.css
+++ b/buttondown.css
@@ -285,7 +285,7 @@ code /* All inline code spans (applies to pre>code as well) */
 
 pre > code /* Code in a code block */
     {
-    padding: none;
+    padding: 0; /* Remove the padding for code spans in a block */
     border: none;
     border-radius: none;
     background-color: inherit;
@@ -492,16 +492,58 @@ div.footnotes > hr:after
     background: white;
     }
 
+/* Convenience classes for DIVs or other things inserted into the Markdown */
+
 /* You can class stuff as "noprint" to not print. 
    Useful since you can't set this media conditional inside an HTML element's 
-   style attribute (I think), and you don't want to make another stylesheet that 
-   imports this one and adds a class just to do this.
+   style attribute (I think).
 */
 
+@media screen
+    {
+    .noscreen /* Don't display on screen (something for print only) */
+        {
+        display: none;
+        }
+    }
+    
 @media print
     {
-    .noprint
+    .noprint /* Don't display in print (something for screen only) */
         {
         display:none;
         }
+    }
+
+.block-center
+    {
+    margin-left: auto;
+    margin-right: auto;
+    display: table;
+    }
+.text-center
+    {
+    text-align: center;
+    }
+
+.block-right
+    {
+    margin-left: auto;
+    margin-right: 0;
+    display: table;
+    }
+.text-right
+    {
+    text-align: right;
+    }
+
+.block-left
+    {
+    margin-left: 0;
+    margin-right: auto;
+    display: table;
+    }
+.text-left
+    {
+    text-align: left;
     }
